# bf-interpreter

./: .gitignore  .gitmodules  Cargo.toml  README.md  bf.py  bf.ua  bf_comp.py  hello.wat  prog.wasm  wasm_runner.js
old/: bf.py
src/: backend.rs  ir.rs  lib.rs  main.rs
