[package]
name = "bf-wasm-compiler"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = {version = "4.5.20", features = [ "derive" ]}
wasm-bindgen = "0.2.93"
wasm-encoder = "0.217.0"
wasmparser = "0.217.0"

[features]
default = ["cli"]
cli = []
wasm = []

[profile.release]
lto = true
